bulletproofing to prevent the crash I reported in bug #13007.  assert is better than a crash any day.